infra/kubernetes/base/network-policy/allow-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-ingress-nginx
  namespace: pernforge-prod

spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - pernforge-client
          - pernforge-server

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
